Sets body to opacity:0, fading it up full using CSS transition property when all content has been properly loaded.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,13 @@
+/* body tag starts off hidden */
+body {
+  opacity: 0;
+  /* Set transition when opacity changes */
+  -webkit-transition: opacity ease 0.8s;
+  -moz-transition: opacity ease 0.8s;
+  -o-transition: opacity ease 0.8s;
+  transition: opacity ease 0.8s;
+}
+
 #condition-picture {
     width: 90%;
     margin: 20px auto;
