--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,12 @@
 /* body tag starts off hidden */
-body {
-  opacity: 0;
+#content-wrapper {
+  overflow-x: hidden;
   /* Set transition when opacity changes */
-  -webkit-transition: opacity ease 0.8s;
-  -moz-transition: opacity ease 0.8s;
-  -o-transition: opacity ease 0.8s;
-  transition: opacity ease 0.8s;
+  -webkit-transition: opacity ease 1s;
+  -moz-transition: opacity ease 1s;
+  -o-transition: opacity ease 1s;
+  transition: opacity ease 1s;
+  opacity: 0;
 }
 
 #condition-picture {
