Removes border-radius property when #weather-condition (.jumbotron) snaps at 1200px media query, removing small gaps that oddly appear in the corners due to the rounded corners. Adds new custom load animation with HTML canvas. The canvas element is removed from the DOM once all content has been loaded (#content-wrapper fades in).

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,7 @@
 @media (max-width: 1200px) {
     #weather-condition {
         margin-bottom: 0px;
+        border-radius: 0;
     }
     .container {
         width: 100%;
